@@ -1,4 +1,4 @@
-/* $Id: heapstring.cpp,v 1.43 2001-08-03 10:53:49 sandervl Exp $ */
+/* $Id: heapstring.cpp,v 1.44 2001-10-12 07:05:48 phaller Exp $ */
 
 /*
  * Project Odin Software License can be found in LICENSE.TXT
@@ -52,7 +52,8 @@ ODINDEBUGCHANNEL(KERNEL32-HEAPSTRING)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrlenA(LPCSTR arg1)
+ODINFUNCTIONNODBG1(int, lstrlenA,
+                   LPCSTR, arg1)
 {
   dprintf2(("KERNEL32: lstrlenA(%s)\n",
            arg1));
@@ -77,7 +78,8 @@ int WIN32API lstrlenA(LPCSTR arg1)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrlenW(LPCWSTR arg1)
+ODINFUNCTIONNODBG1(int, lstrlenW,
+                   LPCWSTR, arg1)
 {
   int rc;
 
@@ -106,7 +108,9 @@ int WIN32API lstrlenW(LPCWSTR arg1)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPSTR WIN32API lstrcatA(LPSTR arg1, LPCSTR arg2)
+ODINFUNCTIONNODBG2(LPSTR, lstrcatA,
+                   LPSTR, arg1, 
+                   LPCSTR, arg2)
 {
   dprintf2(("KERNEL32: lstrcat(%s,%s)\n",
            arg1,
@@ -131,7 +135,9 @@ LPSTR WIN32API lstrcatA(LPSTR arg1, LPCSTR arg2)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPWSTR WIN32API lstrcatW(LPWSTR arg1, LPCWSTR arg2)
+ODINFUNCTIONNODBG2(LPWSTR, lstrcatW,
+                   LPWSTR, arg1,
+                   LPCWSTR, arg2)
 {
   dprintf2(("KERNEL32: OS2lstrcatW(%08xh,%08xh)\n",
            arg1,
@@ -157,7 +163,9 @@ LPWSTR WIN32API lstrcatW(LPWSTR arg1, LPCWSTR arg2)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrcmpA(LPCSTR arg1, LPCSTR  arg2)
+ODINFUNCTIONNODBG2(int, lstrcmpA,
+                   LPCSTR, arg1,
+                   LPCSTR, arg2)
 {
   dprintf2(("KERNEL32: OS2lstrcmpA(%s,%s)\n",
            arg1,
@@ -184,7 +192,10 @@ int WIN32API lstrcmpA(LPCSTR arg1, LPCSTR  arg2)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrncmpA(LPCSTR arg1, LPCSTR  arg2, int l)
+ODINFUNCTIONNODBG3(int, lstrncmpA,
+                   LPCSTR, arg1, 
+                   LPCSTR, arg2,
+                   int, l)
 {
   dprintf2(("KERNEL32: OS2lstrncmpA(%s,%s,%d)\n",
            arg1,
@@ -205,7 +216,10 @@ int WIN32API lstrncmpA(LPCSTR arg1, LPCSTR  arg2, int l)
  *
  * Author    : Przemyslaw Dobrowolski
  *****************************************************************************/
-INT WINAPI lstrncmpiA( LPCSTR str1, LPCSTR str2, INT n )
+ODINFUNCTIONNODBG3(INT, lstrncmpiA,
+                   LPCSTR, str1,
+                   LPCSTR, str2,
+                   INT, n )
 {
   INT firstch,lastch;
   INT result = 0;
@@ -226,7 +240,10 @@ INT WINAPI lstrncmpiA( LPCSTR str1, LPCSTR str2, INT n )
   return(result);
 }
 //TODO: Don't know if this is completely correct
-int WIN32API lstrncmpiW(LPCWSTR str1, LPCWSTR str2, int n)
+ODINFUNCTIONNODBG3(int, lstrncmpiW,
+                   LPCWSTR, str1, 
+                   LPCWSTR, str2,
+                   int, n)
 {
   INT firstch,lastch;
   INT result = 0;
@@ -259,7 +276,9 @@ int WIN32API lstrncmpiW(LPCWSTR str1, LPCWSTR str2, int n)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrcmpW(LPCWSTR arg1, LPCWSTR arg2)
+ODINFUNCTIONNODBG2(int, lstrcmpW,
+                   LPCWSTR, arg1,
+                   LPCWSTR, arg2)
 {
     dprintf2(("KERNEL32: lstrcmpW (%08xh, %08xh)\n",
              arg1,
@@ -286,7 +305,10 @@ int WIN32API lstrcmpW(LPCWSTR arg1, LPCWSTR arg2)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrncmpW(LPCWSTR arg1, LPCWSTR  arg2, int l)
+ODINFUNCTIONNODBG3(int, lstrncmpW,
+                   LPCWSTR, arg1,
+                   LPCWSTR, arg2,
+                   int, l)
 {
   dprintf2(("KERNEL32: OS2lstrncmpW(%08xh,%08xh,%d)\n",
            arg1,
@@ -310,7 +332,9 @@ int WIN32API lstrncmpW(LPCWSTR arg1, LPCWSTR  arg2, int l)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPSTR WIN32API lstrcpyA(LPSTR dest, LPCSTR src)
+ODINFUNCTIONNODBG2(LPSTR, lstrcpyA,
+                   LPSTR, dest,
+                   LPCSTR, src)
 {
     if ( (src == NULL) || (dest == NULL) ) // stupid parameter checking
         return NULL;
@@ -331,7 +355,9 @@ LPSTR WIN32API lstrcpyA(LPSTR dest, LPCSTR src)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPWSTR WIN32API lstrcpyW(LPWSTR dest, LPCWSTR src)
+ODINFUNCTIONNODBG2(LPWSTR, lstrcpyW,
+                   LPWSTR, dest,
+                   LPCWSTR, src)
 {
     if ( (src == NULL) || (dest == NULL) ) // stupid parameter checking
         return NULL;
@@ -354,15 +380,13 @@ LPWSTR WIN32API lstrcpyW(LPWSTR dest, LPCWSTR src)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPSTR WIN32API lstrcpynA(LPSTR arg1, LPCSTR  arg2, int arg3)
+ODINFUNCTIONNODBG3(LPSTR, lstrcpynA,
+                   LPSTR, arg1,
+                   LPCSTR, arg2,
+                   int, arg3)
 {
   register LPSTR p1 = arg1;
   register LPSTR p2 = (LPSTR)arg2;
-
-  dprintf2(("KERNEL32: OS2lstrcpyA(%08xh, %08xh, %08xh)\n",
-           arg1,
-           arg2,
-           arg3));
 
   if(arg3 == 0) {
     return NULL;
@@ -394,13 +418,11 @@ LPSTR WIN32API lstrcpynA(LPSTR arg1, LPCSTR  arg2, int arg3)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPWSTR WIN32API lstrcpynW(LPWSTR dest, LPCWSTR src, int arg3)
+ODINFUNCTION3(LPWSTR, lstrcpynW,
+              LPWSTR, dest,
+              LPCWSTR, src,
+              int, arg3)
 {
-  dprintf2(("KERNEL32: lstrcpynW(%08xh,%08xh,%08xh)",
-           dest,
-           src,
-           arg3));
-
   if (arg3 == 0)
     return NULL;
 
@@ -424,7 +446,9 @@ LPWSTR WIN32API lstrcpynW(LPWSTR dest, LPCWSTR src, int arg3)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrcmpiA(LPCSTR arg1, LPCSTR  arg2)
+ODINFUNCTIONNODBG2(int, lstrcmpiA,
+                   LPCSTR, arg1,
+                   LPCSTR, arg2)
 {
   dprintf2(("KERNEL32: lstrcmpiA(%s,%s)\n",
            arg1,
@@ -452,24 +476,26 @@ int WIN32API lstrcmpiA(LPCSTR arg1, LPCSTR  arg2)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-int WIN32API lstrcmpiW(LPCWSTR str1, LPCWSTR str2)
+ODINFUNCTIONNODBG2(int, lstrcmpiW,
+                   LPCWSTR, str1,
+                   LPCWSTR, str2)
 {
-    dprintf2(("KERNEL32: lstrcmpiW(%08xh,%08xh)", str1, str2));
-
-    if (!str1 || !str2) {
-        SetLastError(ERROR_INVALID_PARAMETER);
-        return 0;
-    }
-    return strcmpiW( str1, str2 );
+  if (!str1 || !str2) {
+    
+    SetLastError(ERROR_INVALID_PARAMETER);
+    return 0;
+  }
+  return strcmpiW( str1, str2 );
 }
 
 //*****************************************************************************
 //lstrcpynWtoA and lstrcpynAtoW must zero-terminate the string
 //because Wine code depends on this behaviour (i.e. comdlg32)
 //*****************************************************************************
-int WIN32API lstrcpynWtoA(LPSTR   astring,
-                          LPCWSTR ustring,
-                          int     length)
+ODINFUNCTIONNODBG3(int, lstrcpynWtoA,
+                   LPSTR,   astring,
+                   LPCWSTR, ustring,
+                   int,     length)
 {
  int ret;
 
@@ -491,9 +517,10 @@ int WIN32API lstrcpynWtoA(LPSTR   astring,
 
 //lstrcpynWtoA and lstrcpynAtoW must zero-terminate the string
 //because Wine code depends on this behaviour (i.e. comdlg32)
-int WIN32API lstrcpynAtoW(LPWSTR unicode,
-                          LPCSTR  ascii,
-                          int    asciilen)
+ODINFUNCTIONNODBG3(int,     lstrcpynAtoW,
+                   LPWSTR,  unicode,
+                   LPCSTR,  ascii,
+                   int ,    asciilen)
 {
  int ret;
 
@@ -527,7 +554,9 @@ int WIN32API lstrcpynAtoW(LPWSTR unicode,
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPSTR WIN32API lstrcpyWtoA(LPSTR ascii, LPCWSTR unicode)
+ODINFUNCTIONNODBG2(LPSTR, lstrcpyWtoA,
+                   LPSTR, ascii,
+                   LPCWSTR, unicode)
 {
     //@@@PH huh? wuz dat?
     if (unicode == NULL)
@@ -563,7 +592,9 @@ LPSTR WIN32API lstrcpyWtoA(LPSTR ascii, LPCWSTR unicode)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPWSTR WIN32API lstrcpyAtoW(LPWSTR unicode, LPCSTR ascii)
+ODINFUNCTIONNODBG2(LPWSTR, lstrcpyAtoW,
+                   LPWSTR, unicode,
+                   LPCSTR, ascii)
 {
     /* achimha for security, strlen might trap if garbage in */
     /* @@@PH 98/06/07 */
@@ -599,7 +630,10 @@ LPWSTR WIN32API lstrcpyAtoW(LPWSTR unicode, LPCSTR ascii)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPVOID WIN32API HEAP_xalloc( HANDLE heap, DWORD flags, DWORD size )
+ODINFUNCTIONNODBG3(LPVOID, HEAP_xalloc,
+                   HANDLE, heap,
+                   DWORD, flags,
+                   DWORD, size )
 {
   LPVOID p = HeapAlloc( heap, flags, size );
   if (!p)
@@ -625,7 +659,11 @@ LPVOID WIN32API HEAP_xalloc( HANDLE heap, DWORD flags, DWORD size )
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPVOID WIN32API HEAP_xrealloc( HANDLE heap, DWORD flags, LPVOID lpMem, DWORD size )
+ODINFUNCTIONNODBG4(LPVOID, HEAP_xrealloc,
+                   HANDLE, heap,
+                   DWORD, flags,
+                   LPVOID, lpMem,
+                   DWORD, size )
 {
   LPVOID p = HeapReAlloc( heap, flags, lpMem, size );
   if (!p)
@@ -652,7 +690,8 @@ LPVOID WIN32API HEAP_xrealloc( HANDLE heap, DWORD flags, LPVOID lpMem, DWORD siz
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPVOID WIN32API HEAP_malloc(DWORD size )
+ODINFUNCTIONNODBG1(LPVOID, HEAP_malloc,
+                   DWORD, size )
 {
   LPVOID p = HeapAlloc( GetProcessHeap(), 0, size );
   if (!p)
@@ -676,7 +715,8 @@ LPVOID WIN32API HEAP_malloc(DWORD size )
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-DWORD WIN32API HEAP_size(LPVOID lpMem)
+ODINFUNCTIONNODBG1(DWORD, HEAP_size,
+                   LPVOID, lpMem)
 {
   return HeapSize( GetProcessHeap(), 0, lpMem );
 }
@@ -694,7 +734,9 @@ DWORD WIN32API HEAP_size(LPVOID lpMem)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPVOID WIN32API HEAP_realloc(LPVOID lpMem, DWORD size )
+ODINFUNCTIONNODBG2(LPVOID, HEAP_realloc,
+                   LPVOID, lpMem,
+                   DWORD, size )
 {
   LPVOID p = HeapReAlloc( GetProcessHeap(), 0, lpMem, size );
   if (!p)
@@ -719,11 +761,9 @@ LPVOID WIN32API HEAP_realloc(LPVOID lpMem, DWORD size )
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-VOID WIN32API HEAP_free(LPVOID lpMem)
+ODINPROCEDURENODBG1(HEAP_free,
+                    LPVOID, lpMem)
 {
-  dprintf2(("KERNEL32: HEAP_free(%08xh)\n",
-           lpMem));
-
   HeapFree( GetProcessHeap(), 0, lpMem);
 }
 
@@ -740,11 +780,15 @@ VOID WIN32API HEAP_free(LPVOID lpMem)
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPSTR WIN32API HEAP_strdupA( HANDLE heap, DWORD flags, LPCSTR str )
+ODINFUNCTIONNODBG3(LPSTR, HEAP_strdupA,
+                   HANDLE, heap,
+                   DWORD, flags,
+                   LPCSTR, str )
 {
-    LPSTR p = (LPSTR)HEAP_xalloc( heap, flags, lstrlenA(str) + 1 );
-    lstrcpyA( p, str );
-    return p;
+  int iLength = lstrlenA(str) + 1;
+  LPSTR p = (LPSTR)HEAP_xalloc( heap, flags, iLength );
+  memcpy( p, str, iLength );
+  return p;
 }
 
 
@@ -760,11 +804,14 @@ LPSTR WIN32API HEAP_strdupA( HANDLE heap, DWORD flags, LPCSTR str )
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPWSTR WIN32API HEAP_strdupW( HANDLE heap, DWORD flags, LPCWSTR str )
+ODINFUNCTIONNODBG3(LPWSTR, HEAP_strdupW,
+                   HANDLE, heap,
+                   DWORD, flags,
+                   LPCWSTR, str )
 {
     INT len = lstrlenW(str) + 1;
     LPWSTR p = (LPWSTR)HEAP_xalloc( heap, flags, len * sizeof(WCHAR) );
-    lstrcpyW( p, str );
+    memcpy( p, str, len );
     return p;
 }
 
@@ -781,7 +828,10 @@ LPWSTR WIN32API HEAP_strdupW( HANDLE heap, DWORD flags, LPCWSTR str )
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPWSTR WIN32API HEAP_strdupAtoW( HANDLE heap, DWORD flags, LPCSTR str )
+ODINFUNCTIONNODBG3(LPWSTR, HEAP_strdupAtoW,
+                   HANDLE, heap,
+                   DWORD, flags,
+                   LPCSTR, str )
 {
     LPWSTR ret;
     int   len;
@@ -808,7 +858,10 @@ LPWSTR WIN32API HEAP_strdupAtoW( HANDLE heap, DWORD flags, LPCSTR str )
  * Author    : Patrick Haller [Thu, 1999/08/05 20:46]
  *****************************************************************************/
 
-LPSTR WIN32API HEAP_strdupWtoA( HANDLE heap, DWORD flags, LPCWSTR str )
+ODINFUNCTIONNODBG3(LPSTR, HEAP_strdupWtoA,
+                   HANDLE, heap,
+                   DWORD, flags,
+                   LPCWSTR, str )
 {
     LPSTR ret;
     int   len;
