@@ -1,4 +1,4 @@
-/* $Id: os2heap.cpp,v 1.27 2001-10-12 03:48:06 phaller Exp $ */
+/* $Id: os2heap.cpp,v 1.28 2001-10-12 07:05:48 phaller Exp $ */
 
 /*
  * Heap class for OS/2
@@ -49,6 +49,8 @@ void   _LNK_CONV releaseHeapMem(Heap_t pHeap, void *block, size_t size);
 // Fast Heap Handle Management
 //******************************************************************************
 
+static int fhhm_hit = 0;
+static int fhhm_miss = 0;
 static HANDLE   fhhm_lastHandle = 0;
 static OS2Heap* fhhm_lastHeap   = NULL;
 
@@ -307,7 +309,12 @@ OS2Heap *OS2Heap::find(HANDLE hHeap)
   // check against cache first
   if (fhhm_lastHeap)
     if (hHeap == fhhm_lastHandle)
+    {
+      fhhm_hit++;
       return fhhm_lastHeap;
+    }
+  
+  fhhm_miss++;
   
   OS2Heap *curheap = OS2Heap::heap;
   
